--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/sql
+spring.datasource.username=arsen
+spring.datasource.password=805671
 
+
+
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jbdc.lob.non_contextual_creation=true
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
