finished api for hotels

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/sql
+spring.datasource.url=jdbc:postgresql://localhost:5432/swe
 spring.datasource.username=arsen
 spring.datasource.password=805671
 
@@ -9,3 +9,4 @@ spring.jpa.properties.hibernate.jbdc.lob.non_contextual_creation=true
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
