--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/swe
-spring.datasource.username=arsen
-spring.datasource.password=805671
+spring.datasource.url=jdbc:postgresql://localhost:5432/HotelChain
+spring.datasource.username=postgres
+spring.datasource.password=a252525
 
 
 
